<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="47sp"
        android:background="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="32sp"
            android:text="@string/payment"
            android:textColor="@color/blue" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="#202020"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText_payment_name"
            android:autofillHints="name"
            android:inputType="text"
            android:layout_width="350sp"
            android:layout_height="50sp"
            android:maxLines="1"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/example_full_name"
            android:paddingStart="10sp"
            android:paddingEnd="0sp"
            android:layout_marginTop="2sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_phone"
            android:textColor="#202020"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:gravity="center"/>
        <EditText
            android:id="@+id/editText_payment_phone"
            android:inputType="number"
            android:autofillHints="phone"
            android:layout_width="350sp"
            android:layout_height="50sp"
            android:maxLines="1"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_phone"
            android:maxLength="10"
            android:paddingStart="10sp"
            android:paddingEnd="0sp"
            android:layout_marginTop="2sp"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="#202020"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText_payment_address"
            android:layout_width="350sp"
            android:layout_height="50sp"
            android:layout_marginTop="2sp"
            android:autofillHints="postalAddress"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/example_address"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10sp"
            android:paddingEnd="0sp"
            android:textColorHint="#78909C" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="#202020"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_total_values"
            android:autofillHints="postalAddress"
            android:layout_width="350sp"
            android:layout_height="50sp"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/bg_edit_text"
            android:paddingStart="10sp"
            android:paddingEnd="0sp"
            android:layout_marginTop="2sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnThanhToanThanhToan"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32sp"
        android:background="@drawable/bg_box_rounded_red"
        android:text="@string/payment"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnThanhToanTroLai"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="17sp"
        android:background="@drawable/bg_box_rounded_red"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textColor="@color/white" />
</LinearLayout>