<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.PaymentActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0sp"
        android:background="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20sp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/your_information"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="vertical"
        android:layout_weight="8">
        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="#202020"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:gravity="center"/>
            <EditText
                android:id="@+id/editText_user_name"
                android:autofillHints="name"
                android:inputType="text"
                android:layout_width="350sp"
                android:layout_height="50sp"
                android:hint="@string/full_name"
                android:maxLines="1"
                android:background="@drawable/bg_edit_text"
                android:paddingStart="10sp"
                android:paddingEnd="0sp"
                android:layout_marginTop="2sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="#202020"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:gravity="center"/>
            <Spinner
                android:id="@+id/spinner_user_gender"
                android:layout_width="350sp"
                android:layout_height="50sp"
                android:maxLines="1"
                android:background="@drawable/bg_edit_text"
                android:paddingStart="10sp"
                android:paddingEnd="0sp"
                android:layout_marginTop="2sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textColor="#202020"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:gravity="center"/>
            <EditText
                android:autofillHints="name"
                android:id="@+id/user_birthday_pick"
                android:inputType="date"
                android:layout_width="350sp"
                android:layout_height="50sp"
                android:hint="@string/date_of_birth_hint"
                android:maxLines="1"
                android:background="@drawable/bg_edit_text"
                android:paddingStart="10sp"
                android:paddingEnd="0sp"
                android:layout_marginTop="2sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_phone"
                android:textColor="#202020"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:gravity="center"/>
            <EditText
                android:id="@+id/editText_user_phone"
                android:inputType="number"
                android:autofillHints="phone"
                android:layout_width="350sp"
                android:layout_height="50sp"
                android:maxLines="1"
                android:maxLength="10"
                android:background="@drawable/bg_edit_text"
                android:paddingStart="10sp"
                android:hint="@string/hint_phone"
                android:paddingEnd="0sp"
                android:layout_marginTop="2sp"
                tools:ignore="TextFields" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_password"
                android:textColor="#202020"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:gravity="center"/>
            <EditText
                android:id="@+id/editText_user_password"
                android:inputType="text"
                android:autofillHints="name"
                android:layout_width="350sp"
                android:layout_height="50sp"
                android:maxLines="1"
                android:background="@drawable/bg_edit_text"
                android:paddingStart="10sp"
                android:paddingEnd="0sp"
                android:hint="@string/passowrd_hint"
                android:layout_marginTop="2sp"
                tools:ignore="TextFields" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_margin="25dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnChangeUserInformation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_box_rounded_red"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Thay Đổi" />

        <Button
            android:id="@+id/btnCancelChangeUserInformation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_box_rounded_red"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Hủy" />
    </LinearLayout>
</LinearLayout>